picture-label-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-label-frontend
spec:
  selector:
    app: picture-label-frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: NodePort
