picture-label-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: picture-label-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.class: gce
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "picture-label-certificate"
spec:
  backend:
    serviceName: picture-label-frontend
    servicePort: 80
